Fix meta styles and spacing

--- a/app/assets/stylesheets/barcelona/_proposals.scss
+++ b/app/assets/stylesheets/barcelona/_proposals.scss
@@ -187,12 +187,18 @@ a.button.new-proposal{
 .proposal-meta{
   margin-top: $line-height / 2;
   a {
+    &:hover{
+      background-color: lighten($highlight, 2%);
+    }
+
     @include label(
       $padding: rem-calc(10px),
       $bg: darken($highlight, 5%),
       $text-size: rem-calc(12),
       $radius: rem-calc(4)
     );
+
+    margin-bottom: rem-calc(4);
   }
 }
 
